src/objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>CR_ID__c</fullName>
        <label>CR-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Change Request</relationshipLabel>
        <relationshipName>Change_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Discussion</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UATReady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SignOff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MoveToLive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CR_ID__c</columns>
        <columns>NAME</columns>
        <columns>Salesforce_Org__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>